docs/deploy/k8s/svc-frontend.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  namespace: prod-env
  labels:
    app: frontend-label
spec:
  selector:
    app: frontend-label
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
